25-jan-2010 - prg318 - gtk - filechooser now remembers last file opened
25-jan-2010 - prg318 - gtk - fixed xscale/yscale spinbuttons not changing config
24-jan-2010 - prg318 - gtk - game window integrated into sdl window (thanks bryan!)
11-nov-2010 - mart0258 - TasEdit - Invalidate greenzone when re-recording earlier portions of a movie. 
09-oct-2010  - zeromus - fix bug in new ppu that made some intensify bits not get applied to output (fixes flashing siren screen in werefolf
09-oct-2010 - gocha - win32 - Ram Watch - fix the multiple selection of watches
09-oct-2010 - gocha - Win32 - Ram Search - multiple selection of addresses, fix restoration of the selection range
09-oct-2010 - gocha - Win32 - Ram Search - fix restoration of the selection range
01-oct-2010 - qeed - Fix many segfaults related to file handling
22-sept-2010 - adelikat - win32 - Hex Editor - ask before removing all bookmarks
04-sept-2010 - adelikat - Win32 - Ramwatch - fix displaying of 2 byte values
26-aug-2010  - mart0258 - Win32 - fix crash when re-opening debugging window
20-aug-2010  - adelikat - Win32 - Display movie name at the top of the main window
09-july-2010 - mart0258 - TasEdit - cleanup; prevent crash when truncating while turbo
13-june-2010 - adelikat - Win32 - avi capture commandline argument and related parameters
12-june-2010 - adelikat - Save Turbo frame skip amount to config so that it can be customized by user
12-june-2010 - adelikat - Lua - fix speed.mode() so that normal turns off turbo
12-june-2010 - CaH4e3 - Fix Young Indiana Jones Chronicals
10-june-2010 - Deign - Fix Ram Search to only display valid RAM addresses (0000-07FF and 6000-7FFF)
10-june-2010 - zeromus - add luasocket to built in lua library
09-june-2010 - adelikat - Movies - Fixed read-only loadstate error logic & messages
07-june-2010 - mart0258 - Movie loading now faster - TAS savestates moved from class MovieRecord to class MovieData
07-june-2010 - adelikat - Lua - new function: gui.screenshotas()